--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 body {
-  /* font-family: "Bigelow Rules", cursive; */
+  padding: 20px 60px;
   font-family: "Open Sans Condensed", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
